<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">GraduationProject</string>
    <string name="action_settings">Settings</string>
    <string name="begin_study">开始学习</string>
    <string name="begin_hint">不是说好的要背单词的么？</string>
    <string name="settings_appblock">设置要锁上的app</string>
    <string name="select_dic">选择词典</string>
    <string name="now_study">现在学习</string>
    <string name="later_study">稍后学习</string>
    <string name="everyday_recite">每天计划背</string>
    <string name="unit_of_words">个</string>
    <string name="select_a_dic">选择一个词库</string>
    <string name="not_select_dic">未选择一个词库</string>
    <string name="not_select_plannum">未计划每天要背的单词数</string>
    <string name="now_loading">正在加载中....</string>
    <string name="lookagain">再看看</string>
    <string name="remembered">记住了</string>
    <string name="ignore">忽略</string>
    <string name="nextone">下一个</string>

    <string name="mustmorethan0">计划数必须大于0</string>

    <!--登录界面-->
    <string name="username">用户名:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password">密码:</string>

    <!--定任务界面-->
    <string name="ensure">确定</string>

    <!--任务列表界面-->
    <!--<string name="dictionary">词典</string>-->
    <!--<string name="completed">完成</string>-->
    <!--<string name="total">确定</string>-->
    <!--<string name="plannum">计划数</string>-->

    <!--任务描述界面-->
    <string name="todayremain">今天剩余</string>

</resources>
