<com.example.jaggie.graduationproject.view.PW_LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:background="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#776f99"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#67ff99"
                android:gravity="center"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>

</com.example.jaggie.graduationproject.view.PW_LinearLayout>